app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

// ATTENTION NERDS! -dm 07-16-2015
// The above text was autogenerated in a .css file
// but we're now a sass file
// so where the above says "//= require" and "//= require_tree"
// we want "@import"
// so says https://github.com/twbs/bootstrap-sass#a-ruby-on-rails



// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
@import "bootstrap-sprockets";
@import "bootstrap";


// these three should be auto-included by jquery-ui/autocomplete ... but they're not. Not sure why. Need 'em
@import "jquery-ui/core";
@import "jquery-ui/menu";
@import "jquery-ui/theme";

@import "jquery-ui/autocomplete";


@import "angucomplete-alt";


// make dance table not expand-to-fit ala
// http://stackoverflow.com/questions/10687306/why-do-twitter-bootstrap-tables-always-have-100-width
.contra-table-nonfluid {width: auto !important;}

.contra-btn-midpage {margin-bottom: 1em;}

// debugging aid
.yellow {background-color: #FF3}

.autocomplete-match-text { color: red; font-weight: bold; }

.contra-label { font-weight: bold; }

.understated { color: #888; }

.notice { 
  font-weight: bold;
  text-align: center;
}


.alert { 
  font-weight: bold;
  text-align: center;
  font-weight: bold;
  color: #F43;
}


.contra-drop-conceivable {
 padding: 0.2em 0em;
}


.contra-drop-enthusiastic {
  background-color: #CFC;
}

.contra-drag-origin {
  color: #333;
  background-color: #BBB;
}

.contra-rotate-90 { 
  transform: rotate(90deg);
}

